# coincounter-vcom

./: .gitignore  CMakeLists.txt  README.markdown  circle_fitting.cpp  circle_fitting.h  coincounter_gui.cpp  coincounter_gui.fbp  coincounter_gui.h  frmAbout.cpp  frmAbout.h  frmMain.cpp  frmMain.h  imageCanvas.cpp  imageCanvas.h  main.cpp  meanshiftsegmentation.cpp  meanshiftsegmentation.h  triangle_threshold.cpp  triangle_threshold.h
